# pypi_in_pages_example

./: README.md  update_packaging_folder.py
.github/workflows/: addrepo.yml  debug.yml  python-package.yml  static.yml
example-package/: pyproject.toml
example-package/src/example_package/: __init__.py  hello.py
pypackages/: content.json  index.html
pypackages/$NAME/: index.html
pypackages/example/: index.html
pypackages/example-package/: example_package-0.1.0-py3-none-any.whl  index.html
pypackages/kube/: index.html
pypackages/six/: index.html
