[tool.poetry]
name = "example-package"
version = "1.0.0"
description = "Example python project"
authors = ["Zackarie Vinckier <zackarie.vinckier--coffinier@atos.net>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hello = "example_package.hello:main"
